--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,79 @@ html {
   list-style-type: none;
 }
 
+.nav {
+  font-family: "PT Sans";
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
 body {
   background-color: #c9b5ab;
 }
 
 h1, h2 {
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
+  font-size: 1.5rem;
+  color: #3f1622;
 }
 
 .habit {
-  font-family: 'PT Serif', serif;
+  font-family: "PT Serif", serif;
+}
+
+a {
+  text-color: #8f2440;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3f1622;
+  text-decoration: underline;
+}
+
+ul > li {
+  list-style-type: circle;
+}
+
+dl > dt {
+  font-size: 1.125rem;
+  font-style: italic;
+  font-weight: bold;
+  color: #222;
+}
+
+cite {
+  font-size: .8rem;
+}
+
+img {
+  width: 100%;
+  max-width: 608px;
+  height: auto;
+}
+
+figcaption {
+  font-size: .8rem;
+  font-style: italic;
+  text-align: center;
+  font-weight: normal;
+}
+
+.p1 {
+  font-family: "PT Serif";
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: bold;
+  color: #222;
+}
+
+.p2 {
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: bold;
+  color: #222;
+}
+
+ol > li {
+  list-style-type: lower-greek;
 }
